Removing border from div(box1a) element.
I'm excited to upload my challenge via github.com

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body{
     align-items: center;
 }
 .box1a{
-    border: .1rem solid black;
-    padding: .1rem;
+/*     border: .1rem solid black; */
+/*     padding: .1rem; */
     width: 40%;
     display: flex;
 }
